updated user route

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@ body{
     font-family: 'Nunito', sans-serif;
     margin:0px;
     padding: 0px;
-    background-image: linear-gradient(#B4D4FF, #40A2D8,#525CEB);
+    background-image: linear-gradient(#B4D4FF, #40A2D8,#525CEB,#3652AD);
     /* background-image: url("./chatbg.png");
     background-size: cover;
 */
